fix(ui): change QoS font size to fix blocks alignment

--- a/ui/app/styles/main.css
+++ b/ui/app/styles/main.css
@@ -874,7 +874,7 @@ pre.white-space {
 }
 
 .card-body .qos-avg {
-  font-size: 46px;
+  font-size: 38px;
 }
 
 .card-body .card-title {
